# voice

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  Cargo.toml  LICENSE  README.md  SKILL.md  rust-analyzer.toml  transcript.txt
.github/workflows/: ci.yml  release.yml
crates/kokoro-candle/: Cargo.toml
crates/kokoro-candle/src/: bilstm.rs  config.rs  modules.rs
crates/kokoro-candle/tests/: resblock_compare.rs
crates/voice-chat/: Cargo.toml
crates/voice-chat/src/: main.rs
crates/voice-cli/: Cargo.toml  README.md  build.rs
crates/voice-cli/src/: jsonrpc.rs  listen.rs  main.rs  mcp.rs
crates/voice-cli/tests/: jsonrpc_protocol.rs
crates/voice-daemon/: Cargo.toml
crates/voice-daemon/src/: audio_recorder.rs  automerge_state.rs  cleanup.rs  config.rs  main.rs  queue.rs  socket.rs  worker.rs
crates/voice-daemon/tests/: daemon_integration.rs
crates/voice-dsp/: Cargo.toml  README.md
crates/voice-dsp/src/: lib.rs
crates/voice-g2p/: Cargo.toml  README.md  build.rs
crates/voice-g2p/src/: espeak.rs  lexicon.rs  lib.rs  number.rs  stress.rs  tagger.rs  token.rs  tokenizer.rs
crates/voice-kokoro/: Cargo.toml
crates/voice-kokoro/examples/: compare.rs  generate.rs
crates/voice-kokoro/src/: albert.rs  istftnet.rs  lib.rs  model.rs
crates/voice-kokoro/tests/: istft_python_spec.rs  resblock_compare.rs  stft_forward_compare.rs  stft_roundtrip.rs
crates/voice-nn/: Cargo.toml  README.md
crates/voice-nn/src/: ada_norm.rs  albert.rs  conv_weighted.rs  lib.rs  lstm.rs  prosody.rs  text_encoder.rs
crates/voice-nn/src/vocoder/: decoder.rs  generator.rs  source.rs
crates/voice-protocol/: Cargo.toml
crates/voice-protocol/src/: client.rs  frames.rs  lib.rs  rpc.rs
crates/voice-stt/: Cargo.toml  README.md  build.rs
crates/voice-stt/data/: moonshine_tiny_config.json  moonshine_tiny_tokenizer.json
crates/voice-stt/examples/: transcribe.rs
crates/voice-stt/src/: builtin.rs  error.rs  lib.rs
crates/voice-stt/src/moonshine/: config.rs  mod.rs  model.rs
crates/voice-tray/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.ts
crates/voice-tray/src/: App.tsx  lib.rs
crates/voice-tray/src-tauri/: automerge_sync.rs  commands.rs  daemon_client.rs  main.rs  state.rs  types.rs
crates/voice-tray/src/components/: QueueItem.tsx  QueuePanel.tsx
crates/voice-tray/src/store/: index.ts
crates/voice-tray/src/styles/: index.css
crates/voice-tray/src/types/: index.ts
crates/voice-tts/: Cargo.toml  README.md  build.rs
crates/voice-tts/data/voices/: af_bella.safetensors  af_heart.safetensors  af_sarah.safetensors  af_sky.safetensors  am_adam.safetensors  am_michael.safetensors  bf_emma.safetensors
crates/voice-tts/src/: builtin.rs  catalog.rs  config.rs  error.rs  lib.rs  model.rs  voice.rs  weights.rs
crates/voice-tts/tests/: istft_roundtrip.rs
crates/voice-whisper/: Cargo.toml
crates/voice-whisper/src/: decoder.rs  lib.rs  mel.rs
crates/voicers/: Cargo.toml
crates/voicers-cli/: Cargo.toml  README.md
crates/voicers-cli/src/: main.rs
crates/voicers-dsp/: Cargo.toml
crates/voicers-g2p/: Cargo.toml
crates/voicers-g2p/src/: espeak.rs  lexicon.rs  lib.rs  stress.rs  token.rs  tokenizer.rs
crates/voicers-nn/: Cargo.toml
crates/voicers-nn/src/: albert.rs
crates/voicers-nn/src/vocoder/: decoder.rs  generator.rs  mod.rs  source.rs
crates/voicers/src/: config.rs  dsp.rs  error.rs  lib.rs  model.rs  voice.rs  weights.rs
crates/voicers/src/modules/: ada_norm.rs  albert.rs  conv_weighted.rs  lstm.rs  mod.rs  prosody.rs
crates/voicers/src/modules/vocoder/: decoder.rs  generator.rs  source.rs
crates/voicers/tests/: istft_roundtrip.rs
docs/architecture/: automerge-state-sync.md
docs/superpowers/plans/: 2026-04-08-mcp-daemon-integration.md  2026-04-09-daemon-automerge-integration.md
docs/superpowers/specs/: 2026-04-08-mcp-daemon-integration-design.md  2026-04-09-tauri-status-bar-design.md
docs/superpowers/test-logs/: 2026-04-08-mcp-daemon-integration.md
eval/: compare.sh  phrases.txt  record.sh  synth_eval.sh
examples/: conversation.py
notebooks/: g2p_test_harness.ipynb  stt_comparison.ipynb  vocoder_comparison.ipynb
tests/: spacy_compare.py
