[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
candle-core = { version = "0.9", features = ["metal"] }
candle-nn = { version = "0.9", features = ["metal"] }
candle-transformers = { version = "0.9" }
candle-metal-kernels = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hf-hub = "0.5"
safetensors = "0.6"
hound = "3"
tokenizers = "0.21"
