[workspace]
members = ["crates/*"]
exclude = ["crates/src-tauri"]
resolver = "2"

[workspace.dependencies]
candle-core = { version = "0.10", features = ["metal"] }
candle-nn = { version = "0.10", features = ["metal"] }
candle-transformers = { version = "0.10" }
candle-metal-kernels = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hf-hub = "0.5"
safetensors = "0.6"
hound = "3"
tokenizers = "0.21"
