[package]
name = "voice"
version = "0.4.1"
edition = "2021"
rust-version = "1.85.0"
description = "CLI for fast text-to-speech and speech-to-text"
license = "MIT"
repository = "https://github.com/rgbkrk/voicers"
readme = "README.md"

[[bin]]
name = "voice"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey = "RWRmHACtt9SpjQB/l+dAoCe+3iqxq/Xe/90P6dyCW70axzy3UkWl+Ave"

[dependencies]
voice-tts = { version = "0.2.0", path = "../voice-tts" }
quill-mlx = "0.25.5"
voice-g2p = { version = "0.2.0", path = "../voice-g2p" }
voice-stt = { version = "0.1.0", path = "../voice-stt" }
clap = { version = "4", features = ["derive"] }
rodio = "0.22"
hound = "3"
pulldown-cmark = "0.13.1"
ctrlc = "3.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
ureq = "2"
