[package]
name = "voice"
version = "0.5.0"
edition = "2021"
rust-version = "1.85.0"
description = "CLI for fast text-to-speech and speech-to-text (candle + Metal)"
license = "MIT"
repository = "https://github.com/rgbkrk/voicers"

[[bin]]
name = "voice"
path = "src/main.rs"

[dependencies]
voice-tts = { version = "0.3.0", path = "../voice-tts" }
candle-core = { version = "0.9", features = ["metal"] }
voice-g2p = { version = "0.2.0", path = "../voice-g2p" }
voice-stt = { version = "0.1.0", path = "../voice-stt" }
clap = { version = "4", features = ["derive"] }
rodio = "0.22"
hound = "3"
pulldown-cmark = "0.13.1"
ctrlc = "3.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
