[package]
name = "voice"
version = "0.4.2"
edition = "2021"
rust-version = "1.85.0"
description = "CLI for fast text-to-speech and speech-to-text"
license = "MIT"
repository = "https://github.com/rgbkrk/voice"
readme = "README.md"

[[bin]]
name = "voice"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey = "RWRmHACtt9SpjQB/l+dAoCe+3iqxq/Xe/90P6dyCW70axzy3UkWl+Ave"

[dependencies]
voice-tts = { version = "0.3.0", path = "../voice-tts" }
candle-core = { workspace = true }
voice-g2p = { version = "0.2.2", path = "../voice-g2p" }
voice-stt = { version = "0.2.0", path = "../voice-stt" }
clap = { version = "4", features = ["derive"] }
rodio = { version = "0.22", features = ["experimental"] }
hound = { workspace = true }
pulldown-cmark = "0.13.1"
ctrlc = "3.5.2"
serde = { workspace = true }
serde_json = { workspace = true }
