[package]
name = "voice-daemon"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "Voice daemon: queues TTS/STT requests from multiple clients"
license = "MIT"
repository = "https://github.com/rgbkrk/voice"

[[bin]]
name = "voiced"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
voice-protocol = { path = "../voice-protocol" }
voice-tts = { path = "../voice-tts" }
voice-stt = { path = "../voice-stt" }
voice-g2p = { path = "../voice-g2p" }
candle-core = { workspace = true }
rodio = { version = "0.22", features = ["experimental"] }
hound = { workspace = true }
automerge = "0.5"
automorph = "0.2"
