[package]
name = "voice-g2p"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "Grapheme-to-phoneme conversion: misaki dictionary + espeak-ng fallback"

[dependencies]
fancy-regex = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
unicode-normalization = "0.1"
