[package]
name = "voice-g2p"
version = "0.1.1"
edition = "2021"
rust-version = "1.85.0"
description = "Grapheme-to-phoneme conversion: misaki dictionary + espeak-ng fallback"
license = "MIT"
repository = "https://github.com/rgbkrk/voicers"

[dependencies]
fancy-regex = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
unicode-normalization = "0.1"
