[package]
name = "voice-kokoro"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "Kokoro-82M TTS on candle with Metal acceleration"
license = "MIT"
repository = "https://github.com/rgbkrk/voice"

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
candle-metal-kernels = { workspace = true }
half = { version = "2", features = ["num-traits"] }
serde = { workspace = true }
serde_json = { workspace = true }
hf-hub = { workspace = true }
safetensors = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hound = "3"
anyhow = "1"
bytemuck = "1"

[[example]]
name = "generate"
required-features = ["metal"]

[features]
default = ["metal"]
metal = []
