[package]
name = "voice-nn"
version = "0.2.0"
edition = "2021"
rust-version = "1.85.0"
description = "Neural network modules: ALBERT, BiLSTM, vocoder, prosody"
license = "MIT"
repository = "https://github.com/rgbkrk/voicers"

[dependencies]
quill-mlx = { path = "../../../mlx-rs/mlx-rs" }
quill-mlx-macros = { path = "../../../mlx-rs/mlx-macros" }
serde = { version = "1", features = ["derive"] }
voice-dsp = { version = "0.2.0", path = "../voice-dsp" }
