[package]
name = "voice-protocol"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "Wire protocol for the voice daemon: frames, RPC types, sync"
license = "MIT"
repository = "https://github.com/rgbkrk/voice"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["io-util", "net"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "rt", "macros"] }
