[package]
name = "voice-stt"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "Speech-to-text library backed by MLX, starting with Moonshine"
license = "MIT"
repository = "https://github.com/rgbkrk/voicers"

[dependencies]
quill-mlx = { version = "0.25.4", features = ["safetensors"] }
quill-mlx-macros = "0.25.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hf-hub = "0.5"
hound = "3"
thiserror = "2"
tokenizers = "0.21"
rubato = "1.0"
audioadapter-buffers = "2.0"
