[package]
name = "voice-stt"
version = "0.2.0"
edition = "2021"
rust-version = "1.85.0"
description = "Speech-to-text library backed by candle + Metal, using Whisper"
license = "MIT"
repository = "https://github.com/rgbkrk/voicers"

[dependencies]
voice-whisper = { path = "../voice-whisper" }
candle-core = { version = "0.9", features = ["metal"] }
candle-nn = { version = "0.9", features = ["metal"] }
candle-transformers = "0.9"
safetensors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hf-hub = "0.5"
hound = "3"
thiserror = "2"
tokenizers = "0.21"
rubato = "1.0"
audioadapter-buffers = "2.0"
