[package]
name = "voice-stt"
version = "0.2.0"
edition = "2021"
rust-version = "1.85.0"
description = "Speech-to-text library backed by candle + Metal, using Whisper"
license = "MIT"
repository = "https://github.com/rgbkrk/voicers"

[dependencies]
voice-whisper = { path = "../voice-whisper" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hf-hub = { workspace = true }
hound = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
rubato = "1.0"
audioadapter-buffers = "2.0"
