[package]
name = "voice-tray"
version = "0.1.0"
edition = "2021"
build = "src-tauri/build.rs"

[[bin]]
name = "voice-tray"
path = "src-tauri/main.rs"

[lib]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon"] }
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
automerge = "0.7"
automorph = "0.2"
notify = "6"
dirs = "5"

# Reuse existing voice crates
voice-protocol = { path = "../voice-protocol" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
