[package]
name = "voice-tts"
version = "0.2.1"
edition = "2021"
rust-version = "1.85.0"
description = "Rust TTS library backed by MLX, starting with Kokoro"
license = "MIT"
repository = "https://github.com/rgbkrk/voicers"

[dependencies]
quill-mlx = { path = "../../../mlx-rs/mlx-rs", features = ["safetensors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hf-hub = "0.5"
hound = "3"
thiserror = "2"
quill-mlx-macros = { path = "../../../mlx-rs/mlx-macros" }
voice-dsp = { version = "0.2.0", path = "../voice-dsp" }
voice-nn = { version = "0.2.0", path = "../voice-nn" }
