[package]
name = "voice-tts"
version = "0.3.0"
edition = "2021"
rust-version = "1.85.0"
description = "Rust TTS library backed by candle + Metal, starting with Kokoro"
license = "MIT"
repository = "https://github.com/rgbkrk/voicers"

[dependencies]
kokoro-candle = { path = "../../../kokoro-candle" }
candle-core = { version = "0.9", features = ["metal"] }
candle-nn = { version = "0.9", features = ["metal"] }
safetensors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hf-hub = "0.5"
hound = "3"
thiserror = "2"
