[package]
name = "voice-tts"
version = "0.3.0"
edition = "2021"
rust-version = "1.85.0"
description = "Rust TTS library backed by candle + Metal, starting with Kokoro"
license = "MIT"
repository = "https://github.com/rgbkrk/voice"

[dependencies]
voice-kokoro = { path = "../voice-kokoro" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hf-hub = { workspace = true }
hound = { workspace = true }
thiserror = { workspace = true }
