[package]
name = "voice-whisper"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "Whisper STT on candle with Metal acceleration"
license = "MIT"
repository = "https://github.com/rgbkrk/voicers"

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
byteorder = "1"
tokenizers = { workspace = true }
thiserror = { workspace = true }
rand = "0.9"
rand_distr = "0.5"
