[package]
name = "voicers"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "Rust TTS library backed by MLX, starting with Kokoro"

[dependencies]
mlx-rs = { version = "0.25", features = ["safetensors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hf-hub = "0.5"
hound = "3"
thiserror = "2"
mlx-macros = "0.25.3"
voicers-dsp = { path = "../voicers-dsp" }
voicers-nn = { path = "../voicers-nn" }
